[package]
name = "evm_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1.4", features = ["full"] }
async-trait = "0.1.81"
futures = "0.3.30"
revm = {version = "11.0.0", features = ["ethersdb", "serde-json", "std"]}
sha3 = "0.10.8"
tokio = {version = "1.38.0", features = ["full"]}
